# 42-cloud-1

./: README.md  flake.nix
app/: .dockerignore  .env.example  .gitignore  .typos.toml  Cargo.toml  Dockerfile  README.md  TODO.md  default.nix  docker-compose.yml  flake.nix  leptosfmt.toml  rust-analyzer.toml  rust-toolchain.toml  shell.nix  treefmt.nix
app/.sqlx/: query-54e988a5dbb456fd22c104ee56eaa809951a6929a6807fc2f7093f48b727544a.json
app/front/: .gitignore  Cargo.toml  Trunk.toml  flake.nix  index.html  shell.nix  style.css
app/front/src/: app.rs  lib.rs  main.rs
app/front/src/app/: mod.rs
app/front/src/app/page/: typing.module.scss  typing.rs
app/front/src/app/page/typing/: field.module.css  field.module.scss  field.rs  mod.rs  on_keydown.rs  progress.rs  query_quote.rs  style.module.css  style.module.scss  wrong_key_animation.module.css  wrong_key_animation.rs
app/front/src/app/page/typing/stats/: mod.rs
app/migrations/: 20250421110022_table_stats.sql
app/src/: app.rs  lib.rs  main.rs
app/src/app/: mod.rs
app/src/app/dynamic_style/: accuracy.rs  mod.rs  relative.rs  wpm.rs
app/src/app/page/: mod.rs  not_found.rs
app/src/schema/: mod.rs  quote.rs  stats.rs
app/style/: _global_compare.scss  _history.scss  _loader.scss  _nav.scss  _not_found.scss  _page_stats.scss  _page_typing.scss  _quote_origin.scss  _stats_ongoing.scss  _typing_field.scss  _var.scss  _wrong_key_animation.scss  main.scss
host/: configuration.nix  flake.nix  shell.nix
host/src/: default.nix  docker.nix  hardware-configuration.nix  nginx.nix  openssh.nix  user.nix
(+31 files in other folders)
