[package]
authors = ["adelille <adelile@42.student.fr>"]
edition = "2024"
name = "cloud-1_frontend"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
	"Document",
	"Element",
	"HtmlElement",
	"Node",
	"Window",
	"KeyboardEvent",
	"console",
] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# [lints]
# workspace = true
